--- a/bibliography.bib
+++ b/bibliography.bib
@@ -90,3 +90,32 @@
   note      = {Accessed: 2025-08-05},
   url       = {https://csa-iot.org/wp-content/uploads/2022/03/Matter_Security_and_Privacy_WP_March-2022.pdf}
 }
+
+@misc{HomeAssistant2024,
+  title     = {Home Assistant - Open source home automation that puts local control and privacy first},
+  year      = {2024},
+  url       = {https://www.home-assistant.io},
+  note      = {Accessed: 2025-08-07}
+}
+
+@misc{OpenHAB2023,
+  title     = {openHAB - empowering the smart home},
+  year      = {2023},
+  url       = {https://www.openhab.org},
+  note      = {Accessed: 2025-08-07}
+}
+
+@misc{NodeRED2024,
+  title     = {Node-RED - Flow-based programming for the Internet of Things},
+  year      = {2024},
+  url       = {https://nodered.org},
+  note      = {Accessed: 2025-08-07}
+}
+
+@misc{ConnectivityStandardsAlliance2023,
+  title     = {Connectivity Standards Alliance - Matter Protocol Overview},
+  author    = {{Connectivity Standards Alliance}},
+  year      = {2023},
+  url       = {https://csa-iot.org/all-solutions/matter/},
+  note      = {Accessed: 2025-08-07}
+}
