--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,a4paper]{report}
 \setlength{\headheight}{15pt}
 \usepackage[utf8]{inputenc}
+\usepackage{comment}
 \usepackage[T1]{fontenc}
 \usepackage[italian]{babel}
 \usepackage{graphicx}
@@ -77,7 +78,7 @@
 \include{capitoli/cap5}
 \include{capitoli/cap6}
 \include{capitoli/cap7}
-\include{capitoli/cap8}
+%\include{capitoli/cap8}
 \appendix
 \include{glossario}
 \include{appendice}
